# adb-device-watch

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
adb-device-watch-sharp/: CMakeLists.txt  dev-watch.cs  test.cs
cmake/: msvc_runtime_selector.cmake
node-adb-device-watch/: LICENSE  README.md  WEBPACK_USAGE.md  index.js  package-lock.json  package.json  test.js  webpack.config.example.js
node-adb-device-watch/scripts/: build-exe.js  package-exe.js
node-adb-device-watch/src/: device-watcher.js
src/: CMakeLists.txt  dev-watch.cc  example1.cc  short_hash_optimized.h  short_hash_simple.c  short_hash_simple.h  test_short_hash.cc  test_short_hash_simple.c
src/adb-client/: CMakeLists.txt  adb-client.cc  adb-client.h  co-adb-client.cc  co-adb-client.h
src/device-enumerator/: CMakeLists.txt  device-watcher.h  shorthash.h  task-thread.h  usb-watch-base.cc  usb-watch-base.h  usb-watch-netlink.cc  usb-watch-netlink.h  usb-watch-win.cc  usb-watch-win.h  usb-watch_tests.cc
src/process/: CMakeLists.txt  process-output.cc  process-output.h  process-unix.cc  process-win.cc  process.cc  process.h  string-replace-all.h
